<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/introduces"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="start"
        android:text="@string/logo"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/course_picture"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/course" />

    <TextView
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/introduction"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/brief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brief"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/product"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/product" />

</LinearLayout>