<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagek4"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/k4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/revious4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Previous"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/black4"
                android:layout_width="10sp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/next4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/NEXT"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/white4"
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/introduce4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/presence_audio_away"
            android:text="@string/introduce"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/brief4.1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brief41"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/brief42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brief42"
            android:textSize="18sp" />

    </LinearLayout>
</FrameLayout>
