<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="550dp"
    tools:context=".SecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagek2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/k2" />

        <TextView
            android:id="@+id/Time2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/white2"
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <TextView
            android:id="@+id/introduce2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/presence_audio_away"
            android:text="@string/introduce"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/brief2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier='1.2'
            android:maxLines="2"
            android:text="@string/brief2"
            android:textSize="18sp" />

    </LinearLayout>


</FrameLayout>