<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirrstFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/abuotus"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_send"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_recent_history"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/news"
                android:layout_width="80dp"
                android:layout_height="60dp"

                android:layout_weight="1"
                android:src="@android:drawable/stat_notify_chat"
                android:contentDescription="TODO" />

            <ImageButton
                android:id="@+id/volunteer"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:src="@android:drawable/presence_audio_away"
                android:contentDescription="TODO" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/about"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/about"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/course"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/course"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/news"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/live"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/living"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/black"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/today_activitys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tadaynews"
            android:textColor="@color/design_default_color_error"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/totalclass" />

    </LinearLayout>

</FrameLayout>